fixing links on index page

--- a/index.html
+++ b/index.html
@@ -29,8 +29,8 @@
 				    <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
 				    	<ul class="nav navbar-nav navbar-right" id="header-links">
 				        	<li><a href="#">About</a></li>
-				        	<li><a href="#">Portfolio</a></li>
-				        	<li><a href="#">Contact</a></li>
+				        	<li><a href="portfolio.html">Portfolio</a></li>
+				        	<li><a href="contact.html">Contact</a></li>
 				    	</ul>
 				    </div>
 				</div>
@@ -58,11 +58,11 @@
 				 	
 				 	<div class="panel-body">
 				 		
-				 		<div class="col-xs-12 col-md-4 ">
-				    		<img src="assets/images/IMG_4652.jpg" class="img-responsive" id="bio-image" alt="Bio Image">
+				 		<div class="col-xs-12 col-md-12">
+				    		<img src="assets/images/BJ_Grad.PNG" class="img-responsive" id="bio-image" alt="Bio Image">
 				  		</div>
 			
-				  		<div class="col-xs-12 col-md-8 main-section-text">
+				  		<div class="col-xs-12 col-md-12 main-section-text">
 				    		<p>As an multicultural immigrant to the United States, I have molded the best attributes from the many locations I have resided in to become an innovative, devoted, and versatile web developer.</p>
 							<p>My education and experience has given me a powerful platform to stand on as I immerse myself in to the world of technology and aim to become an industry-altering developer.</p>
 						</div>
