--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 				<div class="col-xs-12 col-md-3">
 				    <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
 				    	<ul class="nav navbar-nav navbar-right" id="header-links">
-				        	<li><a href="#">About</a></li>
+				        	<li><a href="index.html">About</a></li>
 				        	<li><a href="portfolio.html">Portfolio</a></li>
 				        	<li><a href="contact.html">Contact</a></li>
 				    	</ul>
